--- a/qs-ws.cabal
+++ b/qs-ws.cabal
@@ -24,7 +24,11 @@ executable qs-ws
     heap,
     websockets,
     array,
-    text
-
+    text,
+    warp,
+    utf8-string,
+    blaze-builder,
+    http-types,
+    wai
   -- hs-source-dirs:      
   default-language:    Haskell2010
