--- a/qs-ws.cabal
+++ b/qs-ws.cabal
@@ -29,6 +29,7 @@ executable qs-ws
     utf8-string,
     blaze-builder,
     http-types,
-    wai
+    wai,
+    wai-websockets
   -- hs-source-dirs:      
   default-language:    Haskell2010
